--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h1>Create new list</h1>
   <%= simple_form_for @list do |f| %>
-    <%= f.input :name %>
+    <%= f.input :name, placeholder: 'Action' %>
     <%= f.button :submit %>
   <% end %>
 </div>
